# NNFS

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  README_ru.md  _activation_8hpp.html  _activation_8hpp.js  _activation_8hpp__dep__incl.map  _activation_8hpp__dep__incl.md5  _activation_8hpp__incl.map  _activation_8hpp__incl.md5  _activation_8hpp_source.html  _adagrad_8hpp.html  _adagrad_8hpp.js  _adagrad_8hpp__incl.map  _adagrad_8hpp__incl.md5  _adagrad_8hpp_source.html  _adam_8hpp.html  _adam_8hpp.js  _adam_8hpp__incl.map  _adam_8hpp__incl.md5  _adam_8hpp_source.html  _binary_cross_entropy_8hpp.html  _binary_cross_entropy_8hpp.js  _binary_cross_entropy_8hpp__dep__incl.map  _binary_cross_entropy_8hpp__dep__incl.md5  _binary_cross_entropy_8hpp__incl.map  _binary_cross_entropy_8hpp__incl.md5  _binary_cross_entropy_8hpp_source.html  _c_c_e_8hpp.html  _c_c_e_8hpp.js  _c_c_e_8hpp__dep__incl.map  _c_c_e_8hpp__dep__incl.md5  _c_c_e_8hpp__incl.map  _c_c_e_8hpp__incl.md5  _c_c_e_8hpp_source.html  _c_c_e___softmax_8hpp.html  (+680 more)
.github/workflows/: doxygen  doxygen.yml
cmake/modules/: CodeCoverage.cmake
docs/: CMakeLists.txt  Doxyfile  Doxygen.in
docs/doxygen-custom/: header.html
docs/html/: _activation_8hpp.html  _activation_8hpp.js  _activation_8hpp__dep__incl.map  _activation_8hpp__dep__incl.md5  _activation_8hpp__incl.map  _activation_8hpp__incl.md5  _activation_8hpp_source.html  _binary_cross_entropy_8hpp.html  _binary_cross_entropy_8hpp__incl.map  _binary_cross_entropy_8hpp__incl.md5  _binary_cross_entropy_8hpp_source.html  _differentiable_8hpp.html  _differentiable_8hpp.js  _differentiable_8hpp__dep__incl.map  _differentiable_8hpp__dep__incl.md5  _differentiable_8hpp__incl.map  _differentiable_8hpp__incl.md5  _differentiable_8hpp_source.html  _layer_8hpp.html  _layer_8hpp__incl.map  _layer_8hpp__incl.md5  _layer_8hpp_source.html  _linear_8hpp.html  _linear_8hpp__incl.map  _linear_8hpp__incl.md5  _linear_8hpp_source.html  _loss_8hpp.html  _loss_8hpp.js  _loss_8hpp__dep__incl.map  _loss_8hpp__dep__incl.md5  _loss_8hpp__incl.map  _loss_8hpp__incl.md5  _loss_8hpp_source.html  _r_e_a_d_m_e_8md.html  _re_l_u_8hpp.html  _re_l_u_8hpp.js  _re_l_u_8hpp__incl.map  _re_l_u_8hpp__incl.md5  _re_l_u_8hpp_source.html  _sigmoid_8hpp.html  (+84 more)
docs/html/search/: all_1.js  all_4.js  all_5.js  all_8.js  all_9.js  classes_0.js  classes_5.js  files_0.js  files_1.js  files_5.js  functions_0.js  functions_4.js  searchdata.js
include/: CMakeLists.txt
include/NNFS/: Core
include/NNFS/Activation/: Activation.hpp  ReLU.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
include/NNFS/Layer/: Dense.hpp  Layer.hpp
include/NNFS/Loss/: CCE.hpp  CCE_Softmax.hpp  Loss.hpp
include/NNFS/Metrics/: Metrics.hpp
include/NNFS/Model/: Model.hpp  NeuralNetwork.hpp
include/NNFS/Optimizer/: Adagrad.hpp  Adam.hpp  Optimizer.hpp  RMSProp.hpp  SGD.hpp
include/NNFSCore/: Core  Layer.hpp
include/NNFSCore/Activation/: Activation.hpp  Linear.hpp  ReLU.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
include/NNFSCore/Callback/: CSVLogger.hpp  Callback.hpp
include/NNFSCore/Common/: Differentiable.hpp
include/NNFSCore/Layer/: Dense.hpp  Layer.hpp
include/NNFSCore/Loss/: BinaryCrossEntropy.hpp  CCE.hpp  CCE_Softmax.hpp  Loss.hpp
include/NNFSCore/Metrics/: Metrics.hpp
include/NNFSCore/Model/: Model.hpp  NeuralNetwork.hpp
include/NNFSCore/Optimizer/: Adagrad.hpp  Adam.hpp  Optimizer.hpp  RMSProp.hpp  SGD.hpp
include/NNFSCore/Utilities/: clue.hpp
include/NNFSCore/Utils/: ProgressBar.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+47 more)
tests/: CMakeLists.txt  test_activation.cpp  test_callback.cpp  test_dense.cpp  test_layer.cpp  test_loss.cpp  test_metrics.cpp  test_neural_network.cpp  test_optimizer.cpp
tools/: CMakeLists.txt  mnist.cpp  train.cpp
tools/paint/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  paint.cpp  paint.h  paint.ui  test_canvas.cpp  test_canvas.h
